--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@mobylogix/react-component",
   "version": "0.0.1",
+  "repository": "https://github.com/mobylogix/react-component.git",
   "description": "Generate react component",
   "main": "createReactComponent.js",
   "preferGlobal": "true",
