--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@mobylogix/react-component",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "repository": "https://github.com/mobylogix/react-component.git",
   "description": "Generate react component",
   "main": "createReactComponent.js",
   "preferGlobal": "true",
   "bin": {
-    "react-component" : "createReactComponent.js"
+    "react-component": "createReactComponent.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "change-case": "^2.3.0",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "react-autobind": "^1.0.6"
   }
 }
